Part 1 of Alignment of navigation with Clarity styles #20 https://github.com/vmware/admiral/issues/20 Video: http://engweb.vmware.com/~iilieva/jing/Clarity-Navigation-part1.swf

--- a/ui/app/src/styles/_variables.scss
+++ b/ui/app/src/styles/_variables.scss
@@ -54,7 +54,7 @@ $closable-view-zindex: 100;
 
 $search-result-list-max-height: 260px;
 
-$nav-side-panel-width: 180px;
+$nav-side-panel-width: 216px;
 
 .position-expand {
   position: absolute;
